@@ -129,6 +129,9 @@ Bug Fixes
 * SOLR-6686: facet.threads can return wrong results when using facet.prefix multiple
   times on same field. (Michael Ryan, Tim Underwood via shalin)
 
+* SOLR-7673: Race condition in shard splitting can cause operation to hang indefinitely
+  or sub-shards to never become active. (shalin)
+
 Optimizations
 ----------------------
 
